objects/Loan__c.object
<CustomObject>
    <description>As a C&amp;I business unit user, I need to be able to add Loans to a Boarding Form as needed.</description>
    <fields>
        <fullName>Boarding_Form__c</fullName>
        <label>Boarding Form</label>
        <referenceTo>Boarding_Form__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Branch_Number_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Number__c</fullName>
        <label>Branch Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01-Bank of Internet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRE_Sub_Property_Type_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRE_Sub_Property_Type__c</fullName>
        <description>Subject property sub-property type codes. If applicable, only applies to multifamily and commercial properties. Source doc: CRE Sub-Property Type Codes.</description>
        <inlineHelpText>Subject property sub-property type codes. If applicable, only applies to multifamily and commercial properties. Source doc: CRE Sub-Property Type Codes.</inlineHelpText>
        <label>CRE Sub-Property Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_I_Loan_Type_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_I_Loan_Type__c</fullName>
        <description>&quot;Assigned at LOQ level by Operations authorized designee.. Source doc: C+I Loan Type Matrix&quot;</description>
        <inlineHelpText>Assigned at LOQ level by Operations authorized designee.. Source doc: C+I Loan Type Matrix</inlineHelpText>
        <label>C&amp;I Loan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1A</fullName>
                </value>
                <value>
                    <fullName>1B</fullName>
                </value>
                <value>
                    <fullName>1C</fullName>
                </value>
                <value>
                    <fullName>1D</fullName>
                </value>
                <value>
                    <fullName>1E</fullName>
                </value>
                <value>
                    <fullName>1F</fullName>
                </value>
                <value>
                    <fullName>5A</fullName>
                </value>
                <value>
                    <fullName>5B</fullName>
                </value>
                <value>
                    <fullName>5C</fullName>
                </value>
                <value>
                    <fullName>5D</fullName>
                </value>
                <value>
                    <fullName>5E</fullName>
                </value>
                <value>
                    <fullName>5F</fullName>
                </value>
                <value>
                    <fullName>5G</fullName>
                </value>
                <value>
                    <fullName>5J</fullName>
                </value>
                <value>
                    <fullName>5L</fullName>
                </value>
                <value>
                    <fullName>5M</fullName>
                </value>
                <value>
                    <fullName>5N</fullName>
                </value>
                <value>
                    <fullName>5P</fullName>
                </value>
                <value>
                    <fullName>5R</fullName>
                </value>
                <value>
                    <fullName>5S</fullName>
                </value>
                <value>
                    <fullName>5T</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Report_Code_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Report_Code__c</fullName>
        <label>Call Report Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1C2A</fullName>
                </value>
                <value>
                    <fullName>1A1</fullName>
                </value>
                <value>
                    <fullName>1D</fullName>
                </value>
                <value>
                    <fullName>1A2</fullName>
                </value>
                <value>
                    <fullName>1E2</fullName>
                </value>
                <value>
                    <fullName>6D</fullName>
                </value>
                <value>
                    <fullName>4A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral_Code_Description_Source_Pag__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Code_Description__c</fullName>
        <label>Collateral Code/Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>110 - SFR Construction</fullName>
                </value>
                <value>
                    <fullName>120 - MF Construction</fullName>
                </value>
                <value>
                    <fullName>130 - CRE Construction</fullName>
                </value>
                <value>
                    <fullName>160 - Real Estate - Raw Lots and Land</fullName>
                </value>
                <value>
                    <fullName>400 - Business-Unsecured</fullName>
                </value>
                <value>
                    <fullName>441 - Business Secured by Non-Real Estate Collateral</fullName>
                </value>
                <value>
                    <fullName>501 - SFR Notes</fullName>
                </value>
                <value>
                    <fullName>502 - SFR NPL</fullName>
                </value>
                <value>
                    <fullName>503 - SFR Tax Liens</fullName>
                </value>
                <value>
                    <fullName>504 - MF Notes</fullName>
                </value>
                <value>
                    <fullName>505 - MF NPL</fullName>
                </value>
                <value>
                    <fullName>506 - MF Tax Liens</fullName>
                </value>
                <value>
                    <fullName>507 - CRE Notes</fullName>
                </value>
                <value>
                    <fullName>508 - CRE NPL</fullName>
                </value>
                <value>
                    <fullName>509 - CRE Tax Liens</fullName>
                </value>
                <value>
                    <fullName>510 - Health Care</fullName>
                </value>
                <value>
                    <fullName>511 - SFR Direct</fullName>
                </value>
                <value>
                    <fullName>512 - MF Direct</fullName>
                </value>
                <value>
                    <fullName>513 - CRE Direct</fullName>
                </value>
                <value>
                    <fullName>620 - Consumer Note, Unsecured</fullName>
                </value>
                <value>
                    <fullName>621 - Consumer, New Cars</fullName>
                </value>
                <value>
                    <fullName>622 - Consumer, Used Cars</fullName>
                </value>
                <value>
                    <fullName>640 - Consumer, Secured by Other Collateral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DDA_Accout_Number_1_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDA_Accout_Number_1__c</fullName>
        <description>Interest reserve account number. Source doc: JHA screenshot of accounts.</description>
        <inlineHelpText>Interest reserve account number. Source doc: JHA screenshot of accounts.</inlineHelpText>
        <label>DDA Accout Number 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDA_Accout_Number_2_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDA_Accout_Number_2__c</fullName>
        <label>DDA Accout Number 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDA_Accout_Number_3_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDA_Accout_Number_3__c</fullName>
        <description>Operating account number. Source doc: JHA screenshot of accounts.</description>
        <inlineHelpText>Operating account number. Source doc: JHA screenshot of accounts.</inlineHelpText>
        <label>DDA Accout Number 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Entered_Final_Boarding_Source_P__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Entered_Final_Boarding__c</fullName>
        <label>Date Entered (Final Boarding)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Lockout_Date__c</fullName>
        <description>If applicable, this is the date the borrower will no longer be allowed to draw on funds. Source doc: Loan Agreement, other legal agreement</description>
        <inlineHelpText>If applicable, this is the date the borrower will no longer be allowed to draw on funds. Source doc: Loan Agreement, other legal agreement</inlineHelpText>
        <label>Expiration Date (Lockout Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Funding_Date_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Date__c</fullName>
        <label>Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_Amount_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Line_Amount__c</fullName>
        <label>Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Amount_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <description>Max credit facility being offered to the Borrower. Support doc (1 of the following): Note, Loan Agreement, other legal agreement executed by both BofI and Borrower.</description>
        <inlineHelpText>Max credit facility being offered to the Borrower. Support doc (1 of the following): Note, Loan Agreement, other legal agreement executed by both BofI and Borrower.</inlineHelpText>
        <label>Loan Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Class_Code_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Class_Code__c</fullName>
        <description>The loan should fall under the same class code as Borrower 1. No additional support required.</description>
        <inlineHelpText>The loan should fall under the same class code as Borrower 1. No additional support required.</inlineHelpText>
        <label>Loan Class Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A – Personal</fullName>
                </value>
                <value>
                    <fullName>B – Business Profit</fullName>
                </value>
                <value>
                    <fullName>C – Business Non-Profit</fullName>
                </value>
                <value>
                    <fullName>D – Employee/Direct Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Number_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Term_months_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Term_months__c</fullName>
        <label>Loan Term (months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Managment_Code_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managment_Code__c</fullName>
        <description>&quot;The group that originated and will monitor the loan.For Bridge Lending select PWBD1. For Lender Finance select SSLF2.</description>
        <inlineHelpText>&quot;The group that originated and will monitor the loan.For Bridge Lending select PWBD1. For Lender Finance select SSLF2&quot;.</inlineHelpText>
        <label>Managment Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PWBD1</fullName>
                </value>
                <value>
                    <fullName>SSLF2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maturity_Date_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <description>&quot;Date the loan will become due and payable, prior to any extension agreements taking place. Source doc (1 of the following): Note, Loan Agreement, other legal agreement executed by both BofI and Borrower.
&quot;</description>
        <inlineHelpText>&quot;Date the loan will become due and payable, prior to any extension agreements taking place. Source doc (1 of the following): Note, Loan Agreement, other legal agreement executed by both BofI and Borrower&quot;.</inlineHelpText>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NAICS_Code_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <description>&quot;Industry/Line of Business classification code. Support doc: Final CAM
&quot;</description>
        <inlineHelpText>&quot;Industry/Line of Business classification code. Support doc: Final CAM&quot;</inlineHelpText>
        <label>NAICS Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Line_Amount_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Original_Loan_Amount__c</fullName>
        <description>This will be the same as the Line Amount</description>
        <inlineHelpText>This will be the same as the Line Amount</inlineHelpText>
        <label>Original Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Term_Code_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Original_Term_Code__c</fullName>
        <description>The origination date - the Expiration (lock-out) date/term type. If no expiration date, origination date - maturity date/term type. Example: 24/M = 24 months</description>
        <inlineHelpText>The origination date - the Expiration (lock-out) date/term type. If no expiration date, origination date - maturity date/term type. Example: 24/M = 24 months</inlineHelpText>
        <label>Original Term/Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Origination_Date_note_date_Source_P__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origination_Date_note_date__c</fullName>
        <description>&quot;Date the agreements were executed by both parties. Source doc (1 of the following): Note, Loan Agreement, other legal agreement executed by both BofI and Borrower.
&quot;</description>
        <inlineHelpText>&quot;Date the agreements were executed by both parties. Source doc (1 of the following): Note, Loan Agreement, other legal agreement executed by both BofI and Borrower&quot;.</inlineHelpText>
        <label>Origination Date (note date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Origination_Fee_Discount_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origination_Fee_Discount__c</fullName>
        <label>Origination Fee/Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Analyst_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Initial_Funding_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Initial_Funding__c</fullName>
        <label>Projected Initial Funding</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Propose_Code_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Propose_Code__c</fullName>
        <description>Assigned at LOQ level by Operations authorized designee.. Source doc: C+I Loan Type Matrix</description>
        <inlineHelpText>Assigned at LOQ level by Operations authorized designee.. Source doc: C&amp;I Loan Type Matrix</inlineHelpText>
        <label>Propose Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30 - Lender Finance 30 - Lender Finance</fullName>
                </value>
                <value>
                    <fullName>31 - Bridge/A and D 31 - Bridge/A and D</fullName>
                </value>
                <value>
                    <fullName>34 - Farmland 34 - Farmland</fullName>
                </value>
                <value>
                    <fullName>35 - Participation 35 - Participation</fullName>
                </value>
                <value>
                    <fullName>36 - Lender Finance Participation</fullName>
                </value>
                <value>
                    <fullName>37 - Direct 37 - Direct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelationShio_Manager_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationShio_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Loans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Rating_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Rating__c</fullName>
        <description>Source doc: Final CAM, reference risk rating model page</description>
        <inlineHelpText>Source doc: Final CAM, reference risk rating model page</inlineHelpText>
        <label>Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Code_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Code__c</fullName>
        <description>This is how the term is measured. Typically M for months.</description>
        <inlineHelpText>This is how the term is measured. Typically M for months.</inlineHelpText>
        <label>Term Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Line_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Line__c</fullName>
        <description>Not applicable to loans fully funded at origination. Revolving: the total credit line may be advanced as frequently as availability allows (principal paydowns gain back availability). Straight: advances to the line cannot exceed the total credit line but</description>
        <inlineHelpText>Not applicable to loans fully funded at origination. Revolving: the total credit line may be advanced as frequently as availability allows (principal paydowns gain back availability). Straight: advances to the line cannot exceed the total credit line but</inlineHelpText>
        <label>Type of Line</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Revolving</fullName>
                </value>
                <value>
                    <fullName>Straight</fullName>
                </value>
                <value>
                    <fullName>Letter of Credit</fullName>
                </value>
                <value>
                    <fullName>Performance Letter of Credit</fullName>
                </value>
                <value>
                    <fullName>Financial Letter of Credit</fullName>
                </value>
                <value>
                    <fullName>Commercial Letter of Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Loan</label>
    <nameField>
        <label>Loan Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>